--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -81,3 +81,48 @@ div[class=div-class][name~=name3]{
 #test2~ul{
     /* background-color: deeppink; */
 }
+
+/* 4. 반응 선택자 -------------------------- */
+.area{
+    background-color: yellowgreen;
+    width: 100px;
+    height: 100px;
+}
+
+#active-test{
+    cursor: pointer;
+}
+
+#active-test:active{
+    background-color: yellow;
+    color: red;
+}
+
+#hover-test:hover{
+    cursor: pointer;
+    background-color: brown;
+    color: white;
+}
+
+/* 5. 상태 선택자 */
+/* 기본적으로 해당 선택된 요소 자체에 스타일 반영 */
+input[type=checkbox]:checked{
+    width: 20px;
+    height: 20px;
+}
+
+input[type=checkbox]:checked+label{
+   font-size: 20px;
+}
+
+/* input요소 중 name속성의 값이 user로 시작하는 요소를 선택한 후 focus상태일때만 스타일 부여 */
+input[name^=user]:focus{
+    background-color: gainsboro;
+}
+
+button:enabled{
+    background-color: fuchsia;
+}
+button:disabled{
+    background-color: indigo;
+}
